--- a/css/screen.css
+++ b/css/screen.css
@@ -14,7 +14,8 @@ body {
   line-height: 28px; }
 
 h1 {
-  font-size: 48px; }
+  font-size: 48px;
+  line-height: 36px; }
 
 h2 {
   font-size: 32px;
@@ -25,10 +26,16 @@ h3 {
   line-height: 48px; }
 
 h6 {
-  font-size: 14px; }
+  font-size: 14px;
+  color: #aeb8be;
+  text-transform: uppercase;
+  line-height: 32px;
+  text-align: left;
+  width: 500px;
+  margin: 0 auto; }
 
-.h6 {
-  font-size: 18px; }
+.h5 {
+  font-size: 16px; }
 
 .h7 {
   font-size: 12px; }
@@ -78,20 +85,15 @@ a.btn {
 
 hr {
   border: 0;
-  border-bottom: 2px dotted #aeb8be; }
-
-#blog {
-  float: right;
-  margin-right: 30px;
-  z-index: 10px; }
+  border-bottom: 1px dotted #d8dde0; }
 
 header {
-  margin: 19px auto 50px;
+  margin: 19px auto 0;
   width: 700px;
   height: 170px;
   padding-bottom: 42px;
   border-bottom: 1px dotted #d8dde0;
-  background: url(../images/150x150.png) no-repeat center center;
+  background: url(../images/bysusanlin-totoro.png) no-repeat center center;
   transition: 0.2s opacity;
   -webkit-transition: 0.2s opacity;
   -moz-transition: 0.2s opacity;
@@ -105,6 +107,27 @@ header {
   header:hover {
     opacity: 0.8; }
 
+#subnav {
+  width: 100%;
+  background: white; }
+  #subnav ul {
+    margin: 0 auto;
+    width: 500px;
+    background: white;
+    height: 36px;
+    padding-top: 8px;
+    border-bottom: 1px dotted #d8dde0; }
+    #subnav ul li {
+      float: left;
+      margin-right: 20px; }
+    #subnav ul li:last-child {
+      float: right; }
+
+.sticky {
+  position: fixed;
+  z-index: 100;
+  top: 0; }
+
 img {
   max-width: 100%; }
 
@@ -113,7 +136,7 @@ img {
   text-align: left; }
   #content section {
     width: 500px;
-    margin: 50px auto;
+    margin: 30px auto;
     padding-bottom: 20px;
     border-bottom: 1px dotted #d8dde0; }
     #content section p {
@@ -127,7 +150,7 @@ img {
   #content .piece {
     box-shadow: inset 2px 2px 25px rgba(0, 0, 0, 0.01);
     border-bottom: 1px dotted #d8dde0;
-    padding-top: 50px;
+    margin-top: 30px;
     text-align: center; }
     #content .piece .work {
       margin: 20px auto;
@@ -137,14 +160,16 @@ img {
       margin: 0 auto;
       text-align: left; }
     #content .piece p.button {
+      font-weight: 300;
       margin: 30px auto 70px; }
 
 footer {
   font-size: 12px;
   color: #aeb8be;
   margin-bottom: 20px; }
-  footer .heart {
-    color: #f25f60; }
+
+.heart {
+  color: #f25f60; }
 
 .clear {
   margin: 0;
@@ -161,7 +186,7 @@ footer {
   color: white;
   text-shadow: 0 0 0; }
 
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 500px) {
   header, #content section, #content .piece p, #content section p {
     width: 300px;
     transition: 0.3s width;
@@ -177,4 +202,8 @@ footer {
 
   h3 {
     line-height: 32px;
-    margin-bottom: 10px; } }
+    margin-bottom: 10px; }
+
+  #subnav {
+    visibility: hidden;
+    margin-top: -50px; } }
