--- a/css/screen.scss
+++ b/css/screen.scss
@@ -8,6 +8,7 @@
 $h1: 48px;
 $h2: 32px;
 $h3: 18px;
+$h5: 16px;
 $h6: 14px;
 $h7: 12px;
 
@@ -25,6 +26,8 @@ $beige: #f5f4f1;
 $white: #fff;
 
 $whiteTextShadow: 0 1px 0 $white;
+$dottedBorder: 1px dotted lighten($grey, 15%);
+
 
 // Custom Fonts /////////////
 
@@ -66,6 +69,7 @@ body {
 
 h1 {
 	font-size: $h1;
+	line-height: 36px;
 }
 
 h2 {
@@ -80,9 +84,15 @@ h3 {
 
 h6 {
 	font-size: $h6;
+	color: $grey;
+	text-transform: uppercase;
+	line-height: $h2;
+	text-align: left;
+	width: 500px;
+	margin: 0 auto;
 }
-.h6 {
-	font-size: 18px;
+.h5 {
+	font-size: $h5;
 }
 
 .h7 {
@@ -140,28 +150,53 @@ a.btn {
 
 hr {
 	border: 0;
-	border-bottom: 2px dotted $grey;
-}
-
-#blog {
-	float: right;
-	margin-right: 30px;
-	z-index: 10px;
+	border-bottom: $dottedBorder;
 }
 
 header {
-	margin: 19px auto 50px;
+	margin: 19px auto 0;
 	width: 700px;
 	height: 170px;
 	padding-bottom: 42px;
-	border-bottom: 1px dotted lighten($grey, 15%);
-	background: url(../images/150x150.png) no-repeat center center;
+	border-bottom: $dottedBorder;
+	background: url(../images/bysusanlin-totoro.png) no-repeat center center;
 	@include transition(0.2s, opacity);
 
 	&:hover {
 		opacity: 0.8;
 	}
+}
 
+#subnav {
+
+	width: 100%;
+	background: $white;
+
+	ul {
+		margin: 0 auto;
+		width: 500px;
+		background: $white;
+		height: 36px;
+		padding-top: 8px;
+		border-bottom: $dottedBorder;
+
+		li {
+			float: left;
+			margin-right: 20px;
+		}
+
+		li:last-child {
+			float: right;
+		}
+
+	}
+
+}
+
+.sticky {
+	position: fixed;
+	z-index: 100;
+	top: 0;
 }
 
 img {
@@ -175,9 +210,9 @@ img {
 
 	section {
 		width: 500px;
-		margin: 50px auto;
+		margin: 30px auto;
 		padding-bottom: 20px;
-		border-bottom: 1px dotted lighten($grey, 15%);
+		border-bottom: $dottedBorder;
 	
 		p {
 			font-family: $sans-serif;
@@ -194,10 +229,10 @@ img {
 	}
 
 	.piece {
-	
+
 		box-shadow: inset 2px 2px 25px rgba(0, 0, 0, 0.01);
-		border-bottom: 1px dotted lighten($grey, 15%);
-		padding-top: 50px;
+		border-bottom: $dottedBorder;
+		margin-top: 30px;
 		text-align: center;
 
 		.work {
@@ -212,6 +247,7 @@ img {
 		}
 
 		p.button {
+			font-weight: 300;
 			margin: 30px auto 70px;
 		}
 
@@ -223,11 +259,10 @@ footer {
 	font-size: $h7;
 	color: $grey;
 	margin-bottom: 20px;
+}
 
-	.heart {
-		color: $coral;
-	}
-
+.heart {
+	color: $coral;
 }
 
 .clear {
@@ -247,7 +282,7 @@ footer {
 	text-shadow: 0 0 0;
 }
 
-@media screen and (max-width:540px) {
+@media screen and (max-width:500px) {
 
 	header, #content section, #content .piece p, #content section p {
 		width: 300px;
@@ -257,6 +292,11 @@ footer {
 	h3 {
 		line-height: $h2;
 		margin-bottom: 10px;
+	}
+
+	#subnav {
+		visibility: hidden;
+		margin-top: -50px;
 	}
 
 }
