--- a/css/screen.css
+++ b/css/screen.css
@@ -123,6 +123,29 @@ header {
     #subnav ul li:last-child {
       float: right; 
       margin-right: 0; }
+      
+        .go-top {
+            border-radius: 10px;
+            text-decoration: none;
+        	color: #fff;
+        	background-color: #00bdff;
+        	font-size: 14px;
+            font-family: PlutoSansCondLight, sans-serif;
+        	padding: 6px 10px;
+        	display: none;
+            opacity: 0.5;
+        }
+        
+        .go-top:hover {
+        	opacity: 1.0;
+            color: #fff;
+        }
+        
+        .go-top:active {
+            position: relative;
+            top: 1px; 
+            border: 0; 
+        }
 
 .sticky {
   position: fixed;
