--- a/css/screen.scss
+++ b/css/screen.scss
@@ -18,6 +18,7 @@ $sans-serif: "Pluto Sans Cond Light", sans-serif;
 $icon: "Entypo";
 $icon-social: "Entypo Social";
 
+$blacker: #111;
 $black: #555;
 $blue: #00bdff;
 $coral: #f25f60;
@@ -84,7 +85,7 @@ h3 {
 
 h6 {
 	font-size: $h6;
-	color: $grey;
+	color: $coral;
 	text-transform: uppercase;
 	line-height: $h2;
 	text-align: left;
@@ -188,6 +189,29 @@ header {
 		li:last-child {
 			float: right;
 			margin-right: 0;
+			
+			.go-top {
+            	border-radius: 10px;
+            	text-decoration: none;
+        		color: $white;
+        		background-color: $blue;
+        		padding: 8px 10px 7px;
+        		display: none;
+            	opacity: 0.5;
+            	font-size: $h6;
+
+            	&:hover {
+		        	opacity: 1.0;
+		        }
+		        
+		       	&:active {
+		            position: relative;
+		            top: 1px; 
+		            border: 0; 
+        		}
+
+        	}
+        
 		}
 
 	}
@@ -210,8 +234,9 @@ img {
 	text-align: left;
 
 	section {
+
 		width: 500px;
-		margin: 30px auto;
+		margin: 40px auto;
 		padding-bottom: 20px;
 		border-bottom: $dottedBorder;
 	
@@ -233,7 +258,7 @@ img {
 
 		box-shadow: inset 2px 2px 25px rgba(0, 0, 0, 0.01);
 		border-bottom: $dottedBorder;
-		margin-top: 30px;
+		padding: 40px 0 60px;
 		text-align: center;
 
 		.work {
@@ -250,6 +275,17 @@ img {
 		p.button {
 			font-weight: 300;
 			margin: 30px auto 70px;
+		}
+
+	}
+
+	.dark {
+		background: $blacker;
+		color: $grey;
+		line-height: 30px;
+
+		p {
+			margin-top: 10px;
 		}
 
 	}
@@ -271,7 +307,7 @@ footer {
 	padding: 0;
 	clear: both;
 }
-			
+
 ::selection {
 	background: lighten($coral, 12%);
 	color: $white;
@@ -283,6 +319,8 @@ footer {
 	text-shadow: 0 0 0;
 }
 
+
+//responsibility! I mean, responsivibility!
 @media screen and (max-width:500px) {
 
 	header, #content section, #content .piece p, #content section p {
