--- a/css/screen.scss
+++ b/css/screen.scss
@@ -85,12 +85,11 @@ h3 {
 
 h6 {
 	font-size: $h6;
-	color: $coral;
-	text-transform: uppercase;
+	color: $grey;
 	line-height: $h2;
 	text-align: left;
 	width: 500px;
-	margin: 0 auto;
+	margin: 0 auto 20px;
 }
 .h5 {
 	font-size: $h5;
