--- a/css/screen.css
+++ b/css/screen.css
@@ -27,12 +27,11 @@ h3 {
 
 h6 {
   font-size: 14px;
-  color: #f25f60;
-  text-transform: uppercase;
+  color: #aeb8be;
   line-height: 32px;
   text-align: left;
   width: 500px;
-  margin: 0 auto; }
+  margin: 0 auto 20px; }
 
 .h5 {
   font-size: 16px; }
