--- a/css/screen.scss
+++ b/css/screen.scss
@@ -85,7 +85,7 @@ h3 {
 
 h6 {
 	font-size: $h6;
-	color: $grey;
+	color: darken($grey, 20%);
 	line-height: $h2;
 	text-align: left;
 	width: 500px;
