forgot the stickynav
it's beige now

--- a/css/screen.css
+++ b/css/screen.css
@@ -112,7 +112,7 @@ header {
   #subnav ul {
     margin: 0 auto;
     width: 500px;
-    background: white;
+    background: #fffdf5;
     height: 36px;
     padding-top: 8px;
     border-bottom: 1px dotted #d8dde0; }
