forgot the other background color of the stickynav
:rainbow:

--- a/css/screen.css
+++ b/css/screen.css
@@ -108,7 +108,7 @@ header {
 
 #subnav {
   width: 100%;
-  background: white; }
+  background: #fffdf5; }
   #subnav ul {
     margin: 0 auto;
     width: 500px;
