--- a/css/screen.css
+++ b/css/screen.css
@@ -227,4 +227,7 @@ footer {
 
   #subnav {
     visibility: hidden;
-    margin-top: -50px; } }
+    margin-top: -50px; }
+
+  #content .piece .work {
+    width: 320px; } }
