--- a/css/screen.sass
+++ b/css/screen.sass
@@ -3,22 +3,26 @@
 // Sassy
 //////////
 
+@import "bourbon/bourbon"
+@import "neat/neat"
+
 $h1: 48px
 $h2: 32px
-$h3: 18px
+$h3: 22px
 $h5: 16px
 $h6: 14px
 $h7: 12px
 
-$p: 14px
+$p: 16px
 
 $sans-serif: "Pluto Sans Cond Light", sans-serif
+$serif: "Rooney Light", "rooney-web-1","rooney-web-2", serif
 $icon: "Entypo"
 $icon-social: "Entypo Social"
 
 $blacker: #111
 $black: #555
-$mint: #00bdff
+$blue: #00bdff
 $mint: #21dcc7
 $lightMint: #aeeed9
 $coral: #f25f60
@@ -56,11 +60,11 @@ body
 	font-size: $p
 	font-family: $sans-serif
 	text-align: center
-	line-height: 28px
+	line-height: $p*2
 
 h1 
 	font-size: $h1
-	line-height: 36px
+	line-height: $h1*2
 
 h2 
 	font-size: $h2
@@ -73,7 +77,7 @@ h3
 
 h6 
 	font-size: $h6
-	color: darken($grey, 20%)
+	color: $grey
 	line-height: $h2
 	text-align: left
 	width: 500px
@@ -145,22 +149,26 @@ header
 
 	width: 100%
 	background: $white
+	font-size: $h6
 
 	ul 
 		margin: 0 auto
 		width: 500px
 		background: $white
-		height: 36px
-		padding-top: 8px
+		height: 45px
+		padding-top: 6px
 		border-bottom: $dottedBorder
 
-		li 
+		li
 			float: left
 			margin-right: 20px
 
-		li:last-child 
-			float: right
-			margin-right: 0
+			&:last-child 
+				float: right
+				margin-right: 0
+
+			&.active a
+				color: $coral
 			
 			.go-top 
 				border-radius: 10px
@@ -199,6 +207,7 @@ img
 		margin: 40px auto
 		padding-bottom: 20px
 		border-bottom: $dottedBorder
+		text-align: left
 	
 		p 
 			font-family: $sans-serif
@@ -206,50 +215,75 @@ img
 			width: 500px
 			margin-bottom: 10px
 			
-
 		ul 
 			float: left
 			width: 33%
-		
+			font-size: $h6
+			line-height: $h6*2
 
-	
+	.bordered-piece
+		border-top: $dottedBorder
 
 	.piece 
-
-		border-bottom: $dottedBorder
-		padding: 40px 0 60px
+		padding: 45px 0 60px
 		text-align: center
 
+		//wassup bourbon and neat
 		.work 
 			margin: 20px auto
 			padding: 0 20px
-			width: 700px
+			@include outer-container //row for grid
+			
+			.work-1
+				@include span-columns(12)
+			
+			.work-2
+				@include span-columns(6)
+
+			.work-3
+				@include span-columns(4)
+
+			.work-4
+				@include span-columns(3)
 
 		p 
 			width: 500px
-			margin: 0 auto
+			margin: 0 auto 5px
 			text-align: left
-		
+			font-family: $serif
 
 		p.button 
 			font-weight: 300
 			margin: 30px auto 70px
+
+		a:hover
+			text-decoration: underline
 		
-
-	
-
 	.dark 
 		background: $blacker
 		color: $grey
-		line-height: 30px
+		line-height: $p*2.25
 
 		p 
 			margin-top: 10px
-		
-footer 
+
+	.piece:last-of-type
+		padding-bottom: 30px
+
+.beige
+	background: $beige
+
+.mint
+	background: lighten($lightMint, 15%)
+
+footer
 	font-size: $h7
 	color: $grey
-	margin-bottom: 20px
+	padding-bottom: 80px
+	//background: url('../images/footer.jpg') bottom center no-repeat $beige
+	//background-attachment: fixed
+	//width: 100%
+	//height: 550px
 
 .heart 
 	color: $coral
@@ -272,7 +306,7 @@ footer
 ///////////////////////////////////////////
 //responsibility! I mean, responsivibility!
 
-@media screen and (max-width:500px) 
+@media screen and (max-width:568px) 
 
 	header, #content section, #content .piece p, #content section p 
 		width: 300px
@@ -282,9 +316,44 @@ footer
 		line-height: $h2
 		margin-bottom: 10px
 
+	h6
+		width: 100%
+		text-align: center
+
 	#subnav 
 		visibility: hidden
 		margin-top: -50px
 
 	#content .piece .work
 		width: 320px
+
+	.video-container
+		position: relative
+		margin: 0 auto
+		padding-bottom: 89%
+		padding-top: 30px
+		height: 0
+		overflow: hidden
+		max-width: 548px
+	 
+		iframe, object, embed
+			position: absolute
+			top: 0
+			left: 0
+			width: 100%
+			ceheight: 100%
+
+	#speaker-deck
+		display: none
+
+@media screen and (max-width:480px)
+
+	.video-container
+		padding-bottom: 105%
+		max-width: 460px
+
+@media screen and (max-width:320px)
+
+	.video-container
+		padding-bottom: 155%
+		max-width: 300px
