--- a/css/screen.sass
+++ b/css/screen.sass
@@ -6,6 +6,7 @@
 @import "bourbon/bourbon"
 @import "neat/neat"
 
+$h0: 60px
 $h1: 48px
 $h2: 32px
 $h3: 22px
@@ -51,7 +52,6 @@ $dottedBorder: 1px dotted lighten($grey, 15%)
 	-ms-transition-delay: $delay
 	-o-transition-delay: $delay
 
-
 body 
 	background: $white
 	margin: 0
@@ -61,7 +61,8 @@ body
 	font-family: $sans-serif
 	text-align: center
 	line-height: $p*2
-	//border: 20px solid $lightMint
+	border-left: 20px solid $white
+	border-right: 20px solid $white
 
 h1 
 	font-size: $h1
@@ -73,8 +74,7 @@ h2
 
 h3 
 	font-size: $h3
-	line-height: $h1
-
+	line-height: $h3*3
 
 h6 
 	font-size: $h6
@@ -93,8 +93,14 @@ h6
 .typeLowlight 
 	color: $grey
 
+.typeHighlight
+	color: $mint
+
+.brandFont
+	font-family: $sans-serif !important
+
 b 
-	color: #000
+	color: $blacker
 
 a 
 	text-decoration: none
@@ -110,24 +116,38 @@ a
 
 a.btn 
 
-	font-size: $h3
+	font-size: $h5
+	font-family: $sans-serif
+	line-height: $h5*6
 	color: $white
 	text-shadow: 0 0 0
-	background: $mint
-	box-shadow: 0 3px 0 darken($mint, 10%)
+	background: $coral
+	box-shadow: 0 3px 0 darken($coral, 10%)
 	border-radius: 3px
 	padding: 20px 30px 19px
 	cursor: pointer
 	@include transition(0.3s, background)
 
 	&:hover 
-		background: saturate(lighten($mint, 10%), 10%)
+		background: saturate(lighten($coral, 10%), 10%)
+		text-decoration: none !important
 
 	&:active 
 		position: relative
 		top: 3px
 		border: 0
 		box-shadow: inset 2px 2px 6px rgba(0, 0, 0, 0.15)
+
+.btn-nope
+	background: $grey
+	box-shadow: 0 0 0
+
+	&:hover
+		background: $grey
+
+	&:active
+		top: 0
+		box-shadow: 0 0 0
 
 hr 
 	border: 0
@@ -140,13 +160,8 @@ header
 	height: 170px
 	padding-bottom: 42px
 	border-bottom: $dottedBorder
-	@include transition(0.2s, opacity)
 
-	&:hover 
-		opacity: 0.8
-
-#subnav 
-
+nav
 	width: 100%
 	background: $white
 	font-size: $h6
@@ -173,15 +188,9 @@ header
 			.go-top 
 				border-radius: 10px
 				text-decoration: none
-				color: $white
-				background-color: $mint
 				padding: 8px 10px 7px
 				display: none
-				opacity: 0.5
 				font-size: $h6
-
-				&:hover
-					opacity: 1.0
 
 				&:active
 					position: relative
@@ -192,6 +201,7 @@ header
 	position: fixed
 	z-index: 401
 	top: 0
+	left: 0
 
 img
 	max-width: 100%
@@ -246,7 +256,7 @@ img
 			.work-4
 				@include span-columns(3)
 
-		p 
+		p
 			width: 500px
 			margin: 0 auto 5px
 			text-align: left
@@ -268,23 +278,25 @@ img
 		p 
 			margin-top: 10px
 
-	.piece:last-of-type
-		padding-bottom: 30px
-
 .beige
 	background: $beige
 
 .mint
 	background: lighten($lightMint, 15%)
 
+.pr-photo
+	background: url(../images/bysusanlin.jpg) center center
+	background-attachment: fixed
+	-webkit-background-size: cover
+	-moz-background-size: cover
+	-o-background-size: cover
+	background-size: cover
+	height: 500px
+
 footer
 	font-size: $h7
 	color: $grey
-	padding-bottom: 80px
-	//background: url('../images/footer.jpg') bottom center no-repeat $beige
-	//background-attachment: fixed
-	//width: 100%
-	//height: 550px
+	padding: 45px 0 60px
 
 .heart 
 	color: $coral
@@ -323,10 +335,6 @@ footer
 	h6
 		width: 100%
 		text-align: center
-
-	#subnav 
-		visibility: hidden
-		margin-top: -50px
 
 	#content .piece .work
 		width: 320px
