--- a/css/screen.css
+++ b/css/screen.css
@@ -28,17 +28,13 @@ h2 {
   font-size: 32px;
   line-height: 48px; }
 
-h3 {
+h3, .h3 {
   font-size: 22px;
   line-height: 66px; }
 
-h6 {
+h6, .h6 {
   font-size: 14px;
-  color: #aeb8be;
-  line-height: 32px;
-  text-align: left;
-  width: 500px;
-  margin: 0 auto 20px; }
+  line-height: 21px; }
 
 .h5 {
   font-size: 16px; }
@@ -56,205 +52,49 @@ h6 {
   font-family: "Pluto Sans Cond Light", sans-serif !important; }
 
 b {
-  color: #111111; }
+  color: #f25f60; }
+
+p {
+  max-width: 500px;
+  margin: 0 auto; }
 
 a {
   text-decoration: none;
-  color: #21dcc7; }
+  color: #21dcc7;
+  border-bottom: 1px dotted #d8dde0;
+  padding-bottom: 4px; }
   a:hover {
-    color: #f25f60; }
+    color: #f25f60;
+    border-bottom: 1px dotted #f25f60; }
   a:active {
     position: relative;
     top: 1px;
     border: 0; }
-
-a.btn {
-  font-size: 16px;
-  font-family: "Pluto Sans Cond Light", sans-serif;
-  line-height: 96px;
-  color: white;
-  text-shadow: 0 0 0;
-  background: #f25f60;
-  box-shadow: 0 3px 0 #ee3031;
-  border-radius: 3px;
-  padding: 20px 30px 19px;
-  cursor: pointer;
-  transition: 0.3s background;
-  -webkit-transition: 0.3s background;
-  -moz-transition: 0.3s background;
-  -ms-transition: 0.3s background;
-  -o-transition: 0.3s background;
-  transition-delay: 0;
-  -webkit-transition-delay: 0;
-  -moz-transition-delay: 0;
-  -ms-transition-delay: 0;
-  -o-transition-delay: 0; }
-  a.btn:hover {
-    background: #fc8889;
-    text-decoration: none !important; }
-  a.btn:active {
-    position: relative;
-    top: 3px;
-    border: 0;
-    box-shadow: inset 2px 2px 6px rgba(0, 0, 0, 0.15); }
-
-a.btn-nope {
-  background: #d8dde0;
-  box-shadow: 0 0 0;
-  cursor: default;
-  padding: 19px 30px 20px; }
-  a.btn-nope:hover {
-    background: #aeb8be; }
-  a.btn-nope:active {
-    top: 0;
-    box-shadow: 0 0 0; }
 
 hr {
   border: 0;
   border-bottom: 1px dotted #d8dde0; }
 
 header {
-  margin: 30px auto 0;
-  width: 700px;
-  height: 170px;
-  padding-bottom: 42px;
-  border-bottom: 1px dotted #d8dde0; }
-
-nav {
-  width: 100%;
-  background: white;
-  font-size: 14px; }
-  nav ul {
-    margin: 0 auto;
-    width: 500px;
-    background: white;
-    height: 45px;
-    padding-top: 6px;
-    border-bottom: 1px dotted #d8dde0; }
-    nav ul li {
-      float: left;
-      margin-right: 20px; }
-      nav ul li:last-child {
-        float: right;
-        margin-right: 0; }
-      nav ul li.active a {
-        color: #f25f60; }
-      nav ul li .go-top {
-        border-radius: 10px;
-        text-decoration: none;
-        padding: 8px 10px 7px;
-        display: none;
-        font-size: 14px; }
-        nav ul li .go-top:active {
-          position: relative;
-          top: 1px;
-          border: 0; }
-
-.sticky {
-  position: fixed;
-  z-index: 401;
-  top: 0;
-  left: 0; }
-
-img {
-  max-width: 100%; }
+  margin: 30px auto; }
+  header p {
+    width: 300px;
+    font-size: 14px; }
 
 #content {
-  margin: 0 auto;
-  text-align: left; }
-  #content section {
-    width: 500px;
-    margin: 40px auto;
-    padding-bottom: 20px;
-    border-bottom: 1px dotted #d8dde0;
-    text-align: left; }
-    #content section p {
-      font-family: "Pluto Sans Cond Light", sans-serif;
-      font-size: 16px;
-      width: 500px;
-      margin-bottom: 10px; }
-    #content section ul {
-      float: left;
-      width: 33%;
-      font-size: 14px;
-      line-height: 28px; }
-  #content .bordered-piece {
-    border-top: 1px dotted #d8dde0; }
-  #content .piece {
-    padding: 45px 0 60px;
-    text-align: center; }
-    #content .piece .work {
-      margin: 20px auto;
-      padding: 0 20px;
-      *zoom: 1;
-      max-width: 68em;
-      margin-left: auto;
-      margin-right: auto; }
-      #content .piece .work:before, #content .piece .work:after {
-        content: " ";
-        display: table; }
-      #content .piece .work:after {
-        clear: both; }
-      #content .piece .work .work-1 {
-        float: left;
-        display: block;
-        margin-right: 2.35765%;
-        width: 100%; }
-        #content .piece .work .work-1:last-child {
-          margin-right: 0; }
-      #content .piece .work .work-2 {
-        float: left;
-        display: block;
-        margin-right: 2.35765%;
-        width: 48.82117%; }
-        #content .piece .work .work-2:last-child {
-          margin-right: 0; }
-      #content .piece .work .work-3 {
-        float: left;
-        display: block;
-        margin-right: 2.35765%;
-        width: 31.76157%; }
-        #content .piece .work .work-3:last-child {
-          margin-right: 0; }
-      #content .piece .work .work-4 {
-        float: left;
-        display: block;
-        margin-right: 2.35765%;
-        width: 23.23176%; }
-        #content .piece .work .work-4:last-child {
-          margin-right: 0; }
-    #content .piece p {
-      width: 500px;
-      margin: 0 auto 5px;
-      text-align: left;
-      font-family: "Rooney Light", "rooney-web-1", "rooney-web-2", serif;
-      font-weight: 300; }
-      #content .piece p a:hover {
-        text-decoration: underline; }
-    #content .piece p.button {
-      font-weight: 300;
-      margin: 30px auto 70px; }
-  #content .dark {
-    background: #111111;
-    color: #aeb8be;
-    line-height: 36px; }
-    #content .dark p {
-      margin-top: 10px; }
+  margin: 25px auto 35px;
+  max-width: 900px; }
 
-.beige {
-  background: #f5f4f1; }
-
-.mint {
-  background: #edfbf7; }
-
-.pr-photo {
-  background: url(../images/bysusanlin.jpg) center center #aeeed9;
-  background-attachment: fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  height: 500px; }
+li {
+  float: left;
+  padding: 20px;
+  width: 297px; }
+  li p {
+    text-align: left;
+    width: 90%; }
+    li p a {
+      text-transform: uppercase;
+      font-size: 12px; }
 
 footer {
   font-size: 12px;
@@ -264,7 +104,8 @@ footer {
 .heart {
   color: #f25f60; }
   .heart a {
-    color: #f25f60; }
+    color: #f25f60;
+    border-bottom: 0; }
 
 .clear {
   margin: 0;
@@ -280,54 +121,3 @@ footer {
   background: #21dcc7;
   color: white;
   text-shadow: 0 0 0; }
-
-@media screen and (max-width: 568px) {
-  header, #content section, #content .piece p, #content section p {
-    width: 300px;
-    transition: 0.3s width;
-    -webkit-transition: 0.3s width;
-    -moz-transition: 0.3s width;
-    -ms-transition: 0.3s width;
-    -o-transition: 0.3s width;
-    transition-delay: 0;
-    -webkit-transition-delay: 0;
-    -moz-transition-delay: 0;
-    -ms-transition-delay: 0;
-    -o-transition-delay: 0; }
-
-  h3 {
-    line-height: 32px;
-    margin-bottom: 10px; }
-
-  h6 {
-    width: 100%;
-    text-align: center; }
-
-  #content .piece .work {
-    width: 320px; }
-
-  .video-container {
-    position: relative;
-    margin: 0 auto;
-    padding-bottom: 89%;
-    padding-top: 30px;
-    height: 0;
-    overflow: hidden;
-    max-width: 548px; }
-    .video-container iframe, .video-container object, .video-container embed {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      ceheight: 100%; }
-
-  #speaker-deck {
-    display: none; } }
-@media screen and (max-width: 480px) {
-  .video-container {
-    padding-bottom: 105%;
-    max-width: 460px; } }
-@media screen and (max-width: 320px) {
-  .video-container {
-    padding-bottom: 155%;
-    max-width: 300px; } }
