--- a/css/screen.sass
+++ b/css/screen.sass
@@ -72,17 +72,13 @@ h2
 	font-size: $h2
 	line-height: $h1
 
-h3 
+h3, .h3
 	font-size: $h3
 	line-height: $h3*3
 
-h6 
+h6, .h6
 	font-size: $h6
-	color: $grey
-	line-height: $h2
-	text-align: left
-	width: 500px
-	margin: 0 auto 20px
+	line-height: $h6*1.5
 
 .h5 
 	font-size: $h5
@@ -100,200 +96,54 @@ h6
 	font-family: $sans-serif !important
 
 b 
-	color: $blacker
+	color: $coral
+
+p
+	max-width: 500px
+	margin: 0 auto
 
 a 
 	text-decoration: none
 	color: $mint
+	border-bottom: $dottedBorder
+	padding-bottom: 4px
 
 	&:hover 
 		color: $coral	
+		border-bottom: 1px dotted $coral
 
 	&:active 
 		position: relative
 		top: 1px 
 		border: 0 
 
-a.btn 
-
-	font-size: $h5
-	font-family: $sans-serif
-	line-height: $h5*6
-	color: $white
-	text-shadow: 0 0 0
-	background: $coral
-	box-shadow: 0 3px 0 darken($coral, 10%)
-	border-radius: 3px
-	padding: 20px 30px 19px
-	cursor: pointer
-	@include transition(0.3s, background)
-
-	&:hover 
-		background: saturate(lighten($coral, 10%), 10%)
-		text-decoration: none !important
-
-	&:active 
-		position: relative
-		top: 3px
-		border: 0
-		box-shadow: inset 2px 2px 6px rgba(0, 0, 0, 0.15)
-
-a.btn-nope
-	background: lighten($grey,15%)
-	box-shadow: 0 0 0
-	cursor: default
-	padding: 19px 30px 20px
-
-	&:hover
-		background: $grey
-
-	&:active
-		top: 0
-		box-shadow: 0 0 0
-
 hr 
 	border: 0
 	border-bottom: $dottedBorder
 
+header
+	margin: 30px auto
 
-header 
-	margin: 30px auto 0
-	width: 700px
-	height: 170px
-	padding-bottom: 42px
-	border-bottom: $dottedBorder
+	p
+		width: 300px
+		font-size: $h6
 
-nav
-	width: 100%
-	background: $white
-	font-size: $h6
+#content
+	margin: 25px auto 35px
+	max-width: 900px
 
-	ul 
-		margin: 0 auto
-		width: 500px
-		background: $white
-		height: 45px
-		padding-top: 6px
-		border-bottom: $dottedBorder
+li
+	float: left
+	padding: 20px
+	width: 297px
 
-		li
-			float: left
-			margin-right: 20px
-
-			&:last-child 
-				float: right
-				margin-right: 0
-
-			&.active a
-				color: $coral
-			
-			.go-top 
-				border-radius: 10px
-				text-decoration: none
-				padding: 8px 10px 7px
-				display: none
-				font-size: $h6
-
-				&:active
-					position: relative
-					top: 1px
-					border: 0
-
-.sticky 
-	position: fixed
-	z-index: 401
-	top: 0
-	left: 0
-
-img
-	max-width: 100%
-
-#content 
-
-	margin: 0 auto
-	text-align: left
-
-	section 
-
-		width: 500px
-		margin: 40px auto
-		padding-bottom: 20px
-		border-bottom: $dottedBorder
+	p
 		text-align: left
-	
-		p 
-			font-family: $sans-serif
-			font-size: $p
-			width: 500px
-			margin-bottom: 10px
-			
-		ul 
-			float: left
-			width: 33%
-			font-size: $h6
-			line-height: $h6*2
+		width: 90%
 
-	.bordered-piece
-		border-top: $dottedBorder
-
-	.piece 
-		padding: 45px 0 60px
-		text-align: center
-
-		//wassup bourbon and neat
-		.work 
-			margin: 20px auto
-			padding: 0 20px
-			@include outer-container //row for grid
-			
-			.work-1
-				@include span-columns(12)
-			
-			.work-2
-				@include span-columns(6)
-
-			.work-3
-				@include span-columns(4)
-
-			.work-4
-				@include span-columns(3)
-
-		p
-			width: 500px
-			margin: 0 auto 5px
-			text-align: left
-			font-family: $serif
-			font-weight: 300
-
-			a:hover
-				text-decoration: underline
-
-		p.button 
-			font-weight: 300
-			margin: 30px auto 70px
-		
-	.dark 
-		background: $blacker
-		color: $grey
-		line-height: $p*2.25
-
-		p 
-			margin-top: 10px
-
-.beige
-	background: $beige
-
-.mint
-	background: lighten($lightMint, 15%)
-
-.pr-photo
-	background: url(../images/bysusanlin.jpg) center center $lightMint
-	background-attachment: fixed
-	-webkit-background-size: cover
-	-moz-background-size: cover
-	-o-background-size: cover
-	background-size: cover
-	height: 500px
+		a
+			text-transform: uppercase
+			font-size: $h7
 
 footer
 	font-size: $h7
@@ -305,6 +155,7 @@ footer
 
 	a
 		color: $coral
+		border-bottom: 0
 
 .clear 
 	margin: 0
@@ -320,54 +171,3 @@ footer
 	background: $mint
 	color: $white
 	text-shadow: 0 0 0
-
-///////////////////////////////////////////
-//responsibility! I mean, responsivibility!
-
-@media screen and (max-width:568px) 
-
-	header, #content section, #content .piece p, #content section p 
-		width: 300px
-		@include transition(0.3s, width)
-	
-	h3 
-		line-height: $h2
-		margin-bottom: 10px
-
-	h6
-		width: 100%
-		text-align: center
-
-	#content .piece .work
-		width: 320px
-
-	.video-container
-		position: relative
-		margin: 0 auto
-		padding-bottom: 89%
-		padding-top: 30px
-		height: 0
-		overflow: hidden
-		max-width: 548px
-	 
-		iframe, object, embed
-			position: absolute
-			top: 0
-			left: 0
-			width: 100%
-			ceheight: 100%
-
-	#speaker-deck
-		display: none
-
-@media screen and (max-width:480px)
-
-	.video-container
-		padding-bottom: 105%
-		max-width: 460px
-
-@media screen and (max-width:320px)
-
-	.video-container
-		padding-bottom: 155%
-		max-width: 300px
