darken text with css compiled

--- a/css/screen.css
+++ b/css/screen.css
@@ -105,7 +105,7 @@ li {
   margin: 0 15px 25px 0;
   width: 230px; }
   li a {
-    color: #aeb8be;
+    color: #555555;
     display: inline-block; }
     li a:hover {
       color: #111111;
